--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,7 @@
 [package]
-name = "returnal-server"
+name = "returnal-term"
 version = "0.1.0"
 authors = ["Andrew Suzuki <andrew.b.suzuki@gmail.com>"]
+
+[dependencies]
+rustbox = "0.8.1"
